docs: fix code blocks overflow

--- a/docs/_sass/code.scss
+++ b/docs/_sass/code.scss
@@ -3,7 +3,7 @@ code {
 }
 
 pre {
-  overflow: scroll;
+  overflow: auto;
   tab-size: 2;
   hyphens: none;
   white-space: pre;
